src_old/grammar/anceParser.cpp

// Generated from ./src/grammar/ance.g4 by ANTLR 4.10.1


#include "anceVisitor.h"

#include "anceParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct AnceParserStaticData final {
  AnceParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  AnceParserStaticData(const AnceParserStaticData&) = delete;
  AnceParserStaticData(AnceParserStaticData&&) = delete;
  AnceParserStaticData& operator=(const AnceParserStaticData&) = delete;
  AnceParserStaticData& operator=(AnceParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

std::once_flag anceParserOnceFlag;
AnceParserStaticData *anceParserStaticData = nullptr;

void anceParserInitialize() {
  assert(anceParserStaticData == nullptr);
  auto staticData = std::make_unique<AnceParserStaticData>(
    std::vector<std::string>{
      "file", "projectFile", "global", "description", "variableDescription", 
      "functionDescription", "functionBlock", "parameters", "parameter", 
      "typeDescription", "aliasDescription", "structDescription", "member", 
      "accessModifier", "code", "block", "statement", "expressionStatement", 
      "localVariableDefinition", "localReferenceDefinition", "eraseStatement", 
      "assignment", "assigner", "deleteStatement", "breakStatement", "continueStatement", 
      "returnStatement", "assertStatement", "ifStatement", "whileStatement", 
      "loopStatement", "matchStatement", "matchCase", "expression", "unaryOperator", 
      "binaryOperatorMultiplicative", "binaryOperatorAdditive", "binaryOperatorBitwise", 
      "binaryOperatorShift", "binaryOperatorRelational", "binaryOperatorEquality", 
      "independentExpression", "functionCall", "arguments", "variableAccess", 
      "allocation", "allocator", "addressof", "bindRef", "sizeofType", "sizeofExpression", 
      "matchExpression", "matchExpressionCase", "literalExpression", "stringLiteral", 
      "charLiteral", "integerLiteral", "normalInteger", "specialInteger", 
      "floatingPointLiteral", "booleanLiteral", "nullLiteral", "sizeLiteral", 
      "diffLiteral", "uiptrLiteral", "unitLiteral", "type", "integerType", 
      "arrayType", "vectorType", "keywordType", "floatingPointType", "targetDependentType", 
      "booleanType", "charType", "nullPointerType", "unitType", "customType"
    },
    std::vector<std::string>{
      "", "':'", "'('", "')'", "'{'", "'}'", "','", "'define'", "'alias'", 
      "'struct'", "'public'", "'private'", "'extern'", "'let'", "'erase'", 
      "'<:'", "'<-'", "':='", "'delete'", "'break'", "'continue'", "'return'", 
      "'assert'", "'if'", "'then'", "'else'", "'while'", "'do'", "'loop'", 
      "'match'", "'with'", "'|'", "'=>'", "'default'", "'.'", "'['", "']'", 
      "'as'", "'and'", "'or'", "'<'", "'>'", "'<not>'", "'-'", "'*'", "'/'", 
      "'%'", "'+'", "'<and>'", "'<or>'", "'<xor>'", "'<sl>'", "'<sr>'", 
      "'<='", "'>='", "'=='", "'/='", "'new'", "'dynamic'", "'automatic'", 
      "'addressof'", "'ref'", "'to'", "'sizeof'", "'true'", "'false'", "'null'", 
      "'size'", "'diff'", "'uiptr'", "'&'", "'half'", "'single'", "'double'",
                                                                                                                 "'quad'",
                                                                                                                 "'ptr'",
                                                                                                                 "'bool'",
                                                                                                                 "'char'",
                                                                                                                 "'nullptr'",
                                                                                                                 "",
                                                                                                                 "",
                                                                                                                 "",
                                                                                                                 "",
                                                                                                                 "",
                                                                                                                 "",
                                                                                                                 "",
                                                                                                                 "",
                                                                                                                 "",
                                                                                                                 "",
                                                                                                                 "",
                                                                                                                 "",
                                                                                                                 "",
                                                                                                                 "'[]'",
                                                                                                                 "'not'",
                                                                                                                 "'cmp'",
                                                                                                                 "",
                                                                                                                 "';'"},
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "NATIVE_INTEGER_TYPE", 
      "SIGNED_INTEGER", "HEX_INTEGER", "BIN_INTEGER", "OCT_INTEGER", "HALF",
                                                                                                                 "SINGLE",
                                                                                                                 "DOUBLE",
                                                                                                                 "QUAD",
                                                                                                                 "DECIMAL",
                                                                                                                 "STRING",
                                                                                                                 "CHAR",
                                                                                                                 "INTEGER",
                                                                                                                 "BUFFER",
                                                                                                                 "NOT",
                                                                                                                 "COMPILETIME",
                                                                                                                 "IDENTIFIER",
                                                                                                                 "SEMICOLON",
                                                                                                                 "WHITESPACE",
                                                                                                                 "BLOCK_COMMENT",
                                                                                                                 "LINE_COMMENT",
                                                                                                                 "ERROR_CHAR"}
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  anceParserStaticData = staticData.release();
}

}

anceParser::anceParser(TokenStream *input) : anceParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

anceParser::anceParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  anceParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *anceParserStaticData->atn, anceParserStaticData->decisionToDFA, anceParserStaticData->sharedContextCache, options);
}

anceParser::~anceParser() {
  delete _interpreter;
}

const atn::ATN& anceParser::getATN() const {
  return *anceParserStaticData->atn;
}

std::string anceParser::getGrammarFileName() const {
  return "ance.g4";
}

const std::vector<std::string>& anceParser::getRuleNames() const {
  return anceParserStaticData->ruleNames;
}

const dfa::Vocabulary& anceParser::getVocabulary() const {
  return anceParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView anceParser::getSerializedATN() const {
  return anceParserStaticData->serializedATN;
}


//----------------- FileContext ------------------------------------------------------------------

anceParser::FileContext::FileContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

anceParser::GlobalContext* anceParser::FileContext::global() {
  return getRuleContext<anceParser::GlobalContext>(0);
}

tree::TerminalNode* anceParser::FileContext::EOF() {
  return getToken(anceParser::EOF, 0);
}


size_t anceParser::FileContext::getRuleIndex() const {
  return anceParser::RuleFile;
}


std::any anceParser::FileContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<anceVisitor*>(visitor))
    return parserVisitor->visitFile(this);
  else
    return visitor->visitChildren(this);
}

anceParser::FileContext* anceParser::file() {
  FileContext *_localctx = _tracker.createInstance<FileContext>(_ctx, getState());
  enterRule(_localctx, 0, anceParser::RuleFile);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(156);
    global();
    setState(157);
    match(anceParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ProjectFileContext ------------------------------------------------------------------

anceParser::ProjectFileContext::ProjectFileContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* anceParser::ProjectFileContext::EOF() {
  return getToken(anceParser::EOF, 0);
}

std::vector<anceParser::CodeContext *> anceParser::ProjectFileContext::code() {
  return getRuleContexts<anceParser::CodeContext>();
}

anceParser::CodeContext* anceParser::ProjectFileContext::code(size_t i) {
  return getRuleContext<anceParser::CodeContext>(i);
}


size_t anceParser::ProjectFileContext::getRuleIndex() const {
  return anceParser::RuleProjectFile;
}


std::any anceParser::ProjectFileContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<anceVisitor*>(visitor))
    return parserVisitor->visitProjectFile(this);
  else
    return visitor->visitChildren(this);
}

anceParser::ProjectFileContext* anceParser::projectFile() {
  ProjectFileContext *_localctx = _tracker.createInstance<ProjectFileContext>(_ctx, getState());
  enterRule(_localctx, 2, anceParser::RuleProjectFile);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(162);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << anceParser::T__1)
      | (1ULL << anceParser::T__3)
      | (1ULL << anceParser::T__12)
      | (1ULL << anceParser::T__13)
      | (1ULL << anceParser::T__17)
      | (1ULL << anceParser::T__18)
      | (1ULL << anceParser::T__19)
      | (1ULL << anceParser::T__20)
      | (1ULL << anceParser::T__21)
      | (1ULL << anceParser::T__22)
      | (1ULL << anceParser::T__25)
      | (1ULL << anceParser::T__27)
      | (1ULL << anceParser::T__28)
      | (1ULL << anceParser::T__34)
      | (1ULL << anceParser::T__39)
      | (1ULL << anceParser::T__41)
      | (1ULL << anceParser::T__42)
      | (1ULL << anceParser::T__43)
      | (1ULL << anceParser::T__56)
      | (1ULL << anceParser::T__59)
      | (1ULL << anceParser::T__60)
      | (1ULL << anceParser::T__62))) != 0) || ((((_la - 64) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 64)) & ((1ULL << (anceParser::T__63 - 64))
      | (1ULL << (anceParser::T__64 - 64))
      | (1ULL << (anceParser::T__65 - 64))
      | (1ULL << (anceParser::T__66 - 64))
      | (1ULL << (anceParser::T__67 - 64))
      | (1ULL << (anceParser::T__68 - 64))
      | (1ULL << (anceParser::T__69 - 64))
      | (1ULL << (anceParser::T__70 - 64))
      | (1ULL << (anceParser::T__71 - 64))
      | (1ULL << (anceParser::T__72 - 64))
      | (1ULL << (anceParser::T__73 - 64))
      | (1ULL << (anceParser::T__74 - 64))
      | (1ULL << (anceParser::T__75 - 64))
      | (1ULL << (anceParser::T__76 - 64))
      | (1ULL << (anceParser::T__77 - 64))
      | (1ULL << (anceParser::NATIVE_INTEGER_TYPE - 64))
      | (1ULL << (anceParser::SIGNED_INTEGER - 64))
      | (1ULL << (anceParser::HEX_INTEGER - 64))
      | (1ULL << (anceParser::BIN_INTEGER - 64))
      | (1ULL << (anceParser::OCT_INTEGER - 64))
      | (1ULL << (anceParser::HALF - 64))
      | (1ULL << (anceParser::SINGLE - 64))
      | (1ULL << (anceParser::DOUBLE - 64))
      | (1ULL << (anceParser::QUAD - 64))
      | (1ULL << (anceParser::STRING - 64))
      | (1ULL << (anceParser::CHAR - 64))
      | (1ULL << (anceParser::INTEGER - 64))
      | (1ULL << (anceParser::BUFFER - 64))
      | (1ULL << (anceParser::NOT - 64))
      | (1ULL << (anceParser::IDENTIFIER - 64)))) != 0)) {
      setState(159);
      code();
      setState(164);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(165);
    match(anceParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GlobalContext ------------------------------------------------------------------

anceParser::GlobalContext::GlobalContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<anceParser::DescriptionContext *> anceParser::GlobalContext::description() {
  return getRuleContexts<anceParser::DescriptionContext>();
}

anceParser::DescriptionContext* anceParser::GlobalContext::description(size_t i) {
  return getRuleContext<anceParser::DescriptionContext>(i);
}


size_t anceParser::GlobalContext::getRuleIndex() const {
  return anceParser::RuleGlobal;
}


std::any anceParser::GlobalContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<anceVisitor*>(visitor))
    return parserVisitor->visitGlobal(this);
  else
    return visitor->visitChildren(this);
}

anceParser::GlobalContext* anceParser::global() {
  GlobalContext *_localctx = _tracker.createInstance<GlobalContext>(_ctx, getState());
  enterRule(_localctx, 4, anceParser::RuleGlobal);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(170);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << anceParser::T__9)
      | (1ULL << anceParser::T__10)
      | (1ULL << anceParser::T__11))) != 0)) {
      setState(167);
      description();
      setState(172);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DescriptionContext ------------------------------------------------------------------

anceParser::DescriptionContext::DescriptionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

anceParser::VariableDescriptionContext* anceParser::DescriptionContext::variableDescription() {
  return getRuleContext<anceParser::VariableDescriptionContext>(0);
}

anceParser::FunctionDescriptionContext* anceParser::DescriptionContext::functionDescription() {
  return getRuleContext<anceParser::FunctionDescriptionContext>(0);
}

anceParser::TypeDescriptionContext* anceParser::DescriptionContext::typeDescription() {
  return getRuleContext<anceParser::TypeDescriptionContext>(0);
}


size_t anceParser::DescriptionContext::getRuleIndex() const {
  return anceParser::RuleDescription;
}


std::any anceParser::DescriptionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<anceVisitor*>(visitor))
    return parserVisitor->visitDescription(this);
  else
    return visitor->visitChildren(this);
}

anceParser::DescriptionContext* anceParser::description() {
  DescriptionContext *_localctx = _tracker.createInstance<DescriptionContext>(_ctx, getState());
  enterRule(_localctx, 6, anceParser::RuleDescription);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(176);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(173);
      variableDescription();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(174);
      functionDescription();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(175);
      typeDescription();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VariableDescriptionContext ------------------------------------------------------------------

anceParser::VariableDescriptionContext::VariableDescriptionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

anceParser::AccessModifierContext* anceParser::VariableDescriptionContext::accessModifier() {
  return getRuleContext<anceParser::AccessModifierContext>(0);
}

tree::TerminalNode* anceParser::VariableDescriptionContext::IDENTIFIER() {
  return getToken(anceParser::IDENTIFIER, 0);
}

tree::TerminalNode* anceParser::VariableDescriptionContext::SEMICOLON() {
  return getToken(anceParser::SEMICOLON, 0);
}

tree::TerminalNode* anceParser::VariableDescriptionContext::COMPILETIME()
{
    return getToken(anceParser::COMPILETIME, 0);
}

anceParser::TypeContext* anceParser::VariableDescriptionContext::type() {
  return getRuleContext<anceParser::TypeContext>(0);
}

anceParser::AssignerContext* anceParser::VariableDescriptionContext::assigner() {
  return getRuleContext<anceParser::AssignerContext>(0);
}

anceParser::ExpressionContext* anceParser::VariableDescriptionContext::expression() {
  return getRuleContext<anceParser::ExpressionContext>(0);
}


size_t anceParser::VariableDescriptionContext::getRuleIndex() const {
  return anceParser::RuleVariableDescription;
}


std::any anceParser::VariableDescriptionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<anceVisitor*>(visitor))
    return parserVisitor->visitVariableDescription(this);
  else
    return visitor->visitChildren(this);
}

anceParser::VariableDescriptionContext* anceParser::variableDescription() {
  VariableDescriptionContext *_localctx = _tracker.createInstance<VariableDescriptionContext>(_ctx, getState());
  enterRule(_localctx, 8, anceParser::RuleVariableDescription);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(178);
    accessModifier();
    setState(180);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == anceParser::COMPILETIME)
    {
        setState(179);
        match(anceParser::COMPILETIME);
    }
    setState(182);
    match(anceParser::IDENTIFIER);
    setState(185);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == anceParser::T__0) {
      setState(183);
      match(anceParser::T__0);
      setState(184);
      type();
    }
    setState(190);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << anceParser::T__14)
      | (1ULL << anceParser::T__15)
      | (1ULL << anceParser::T__16))) != 0)) {
      setState(187);
      assigner();
      setState(188);
      expression(0);
    }
    setState(192);
    match(anceParser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionDescriptionContext ------------------------------------------------------------------

anceParser::FunctionDescriptionContext::FunctionDescriptionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

anceParser::AccessModifierContext* anceParser::FunctionDescriptionContext::accessModifier() {
  return getRuleContext<anceParser::AccessModifierContext>(0);
}

tree::TerminalNode* anceParser::FunctionDescriptionContext::IDENTIFIER() {
  return getToken(anceParser::IDENTIFIER, 0);
}

anceParser::ParametersContext* anceParser::FunctionDescriptionContext::parameters() {
  return getRuleContext<anceParser::ParametersContext>(0);
}

anceParser::FunctionBlockContext* anceParser::FunctionDescriptionContext::functionBlock() {
  return getRuleContext<anceParser::FunctionBlockContext>(0);
}

tree::TerminalNode* anceParser::FunctionDescriptionContext::SEMICOLON() {
  return getToken(anceParser::SEMICOLON, 0);
}

tree::TerminalNode* anceParser::FunctionDescriptionContext::COMPILETIME()
{
    return getToken(anceParser::COMPILETIME, 0);
}

anceParser::TypeContext* anceParser::FunctionDescriptionContext::type() {
  return getRuleContext<anceParser::TypeContext>(0);
}


size_t anceParser::FunctionDescriptionContext::getRuleIndex() const {
  return anceParser::RuleFunctionDescription;
}


std::any anceParser::FunctionDescriptionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<anceVisitor*>(visitor))
    return parserVisitor->visitFunctionDescription(this);
  else
    return visitor->visitChildren(this);
}

anceParser::FunctionDescriptionContext* anceParser::functionDescription() {
  FunctionDescriptionContext *_localctx = _tracker.createInstance<FunctionDescriptionContext>(_ctx, getState());
  enterRule(_localctx, 10, anceParser::RuleFunctionDescription);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(194);
    accessModifier();
    setState(196);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == anceParser::COMPILETIME)
    {
        setState(195);
        match(anceParser::COMPILETIME);
    }
    setState(198);
    match(anceParser::IDENTIFIER);
    setState(199);
    match(anceParser::T__1);
    setState(200);
    parameters();
    setState(201);
    match(anceParser::T__2);
    setState(204);
    _errHandler->sync(this);
